--- a/README
+++ b/README
@@ -40,8 +40,11 @@ usuario.salario # 13047
 usuario.salario_f # 130.47
 
 
-
-
+AGRADECIMENTOS
+==============
+Jera software por me dar toda liberdade para criação de projetos úteis
+Time de desenvolvimento Tendência
+Minha namorada Vanessa Ferraz (http://www.ferrazpersonaltrainer.com.br) por me ajudar e incentivar sempre mais
 
 Copyright (c) 2010 [foolkgs@jera.com.br], released under the MIT license
 jera.com.br
